opam-version: "2.0"
name:         "punycode"
homepage:     "https://github.com/cfcs/ocaml-punycode"
dev-repo:     "git+https://github.com/cfcs/ocaml-punycode.git"
bug-reports:  "https://github.com/cfcs/ocaml-punycode/issues"
doc:          "https://cfcs.github.io/ocaml-punycode/doc"
author:       ["cfcs"]
maintainer:   ["cfcs"]
license:      "AGPL"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "runtest"] {with-test}
]

depends: [
  "ocaml"     { >= "4.02" }
  "dune"      { >= "1.9.3" & build }

  "astring"
  "domain-name"  { >= "0.3" }
  "uchar" # for ocaml 4.02 compat
  "rresult"
  "uutf"

  "alcotest" {test}
  "crowbar" {test}
  "qcheck" {test}
]
